# StockAnal_Sys

./: .env-example  .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  SECURITY.md  SETUP.md  akshare.md  docker-compose.yml  futures_analyzer.py  main.py  pyproject.toml  requirements.txt  run.py  scenario_predictor.py  start.sh  stock_analyzer.py  stock_qa.py  test_di.py  test_redis.py  web_server.py
app/: analysis_instances.py
app/analysis/: __init__.py  _analysis_container.py  capital_flow_analyzer.py  etf_analyzer.py  fundamental_analyzer.py  news_fetcher.py  stock_analyzer.py  task_manager.py
app/api/: agent_analysis.py  (+1 more)
backend/: .env-example  .gitignore  SWAGGER_DEBUG_README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/app/: __init__.py
backend/app/analysis/: capital_flow_analyzer.py  etf_analyzer.py  stock_qa.py  task_manager.py
backend/app/api/: agent_analysis.py  analysis.py  capital_flow.py  capital_flow_analysis.py  data.py  fundamental_analysis.py  news.py  qa.py  readme.md  sector_stocks_analysis.py  stock_analysis.py  system.py  tasks.py  us_stocks.py
backend/app/core/: _core_container.py  database.py  database_providers.py  logging_config.py  mongo_log_handler.py
backend/app/web/: page_router.py  utils.py  web_server.py
backend/app/web/static/: swagger.json
backend/app/web/templates/: capital_flow.html  change_password.html  dashboard.html  error.html  fundamental.html  index.html  login.html  logs.html  market_scan.html  risk_monitor.html  settings.html  stock_detail.html
config/: settings.json
docker/: .env.example  README.md  docker-compose.yml
docs/: AGENT.md  ARCHITECTURE.md  DEVELOPMENT_SETUP.md
frontend/: README.md  env.example  package-lock.json
scripts/: start.sh  test_mongo_logging.py
templates/: futures_ranking.html  layout.html  qa.html
web/: index.html  package.json  start-dev.bat
(+114 files in other folders)
